--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,43 @@ body {
   background: #e5e5e5;
   font-family: 'Open Sans Condensed', sans-serif;
 }
+
+.link,
+.link:visited {
+  text-decoration: none;
+  color: #555;
+  border-bottom: 1px dashed black;
+}
+.link:hover,
+link:active {
+  color: rgb(145, 72, 72);
+  transition: all ease 300ms;
+}
+.app-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 20px;
+  max-width: 1400px;
+  padding: 90px 100px;
+  margin: 0 auto;
+}
+.slide-wrapper {
+  width: 700px;
+  border: 1px solid rgba(85, 83, 83, 0.452);
+}
+
+@media (max-width: 990px) {
+  .app-wrapper {
+    display: flex;
+    flex-direction: column;
+    grid-template-columns: none;
+    grid-template-rows: none;
+    padding: 60px 0;
+    text-align: center;
+    overflow-x: hidden;
+  }
+  .slide-wrapper {
+    width: 100%;
+    margin-bottom: 70px;
+  }
+}
